[package]
name = "de_memory"
version = "0.1.16"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
glob = "0.3.3"
whoami = "1.6.1"
windows = { version = "0.62.2", features = [
	"Win32",
	"Win32_Foundation",
	"Win32_System",
	"Win32_System_Diagnostics",
	"Win32_System_Performance",
	"Win32_NetworkManagement",
	"Win32_NetworkManagement_QoS",
	"Win32_Networking",
	"std",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Memory",
	"Win32_System_Threading",
	"Win32_System_SystemServices",
	"Win32_Security",          # 修复管理员权限检查的依赖
  "Win32_System_WindowsProgramming", # WideCharToMultiByte 依赖
] }

[build-dependencies]
winres = "0.1.12"
[profile.release]
lto = true      # 链接时优化
panic = "abort" # 减少体积

[profile.release.package.env_logger]
opt-level = 3     # 最高优化级别
codegen-units = 1 # 单代码生成单元提升优化效果（牺牲编译速度）

[profile.release.package.windows]
opt-level = 3     # 最高优化级别
codegen-units = 1 # 单代码生成单元提升优化效果（牺牲编译速度）

[profile.release.package.whoami]
opt-level = 3     # 最高优化级别
codegen-units = 1 # 单代码生成单元提升优化效果（牺牲编译速度）

[profile.release.package.glob]
opt-level = 3     # 最高优化级别
codegen-units = 1 # 单代码生成单元提升优化效果（牺牲编译速度）
